tests/assembler/pass/test7.ial
type automatic Foo
{
    field static int32 bar;
}
