tests/assembler/fail/test2.ial
type automatic Foo
{
    field int32 Bar;
    field int32 Bar;
}
